[package]
name = "file-requirements"
version = "0.1.0"
edition = "2024"
description = "Composable file existence requirements with nested AND/OR logic and duplicate-term protection."
license = "LICENSE"
repository = "https://github.com/COMBINE-lab/file-requirements"
readme = "README.md"
keywords = ["files", "validation", "requirements", "and", "or"]
categories = ["filesystem", "development-tools"]

[dependencies]
thiserror = "2"

[dev-dependencies]
tempfile = "3"
